--- a/[1.a] reflacx_dataset_preprocessing.ipynb
+++ b/[1.a] reflacx_dataset_preprocessing.ipynb
@@ -1091,6 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "merged_df = merged_df.reset_index()\n",
     "merged_df.to_csv(\"reflacx_with_clinical.csv\")"
    ]
   },
@@ -1186,16 +1187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "413.0"
+       "590"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,17 +1207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "u_df = u_df.reset_index()\n",
     "u_df.to_csv('reflacx_u_df.csv')"
    ]
   }
