--- a/[7] generate_eval_csv.ipynb
+++ b/[7] generate_eval_csv.ipynb
@@ -108,11 +108,14 @@
     "\n",
     "    # CXR_Clinical = \"val_ar_0_9556_ap_0_6876_test_ar_0_8438_ap_0_6305_epoch43_WithClincal_05-16-2022 06-58-30_CXR+Clinical\"\n",
     "\n",
-    "    CXR_Clinical_ap = \"val_ar_0_9381_ap_0_6945_test_ar_0_8224_ap_0_6378_epoch20_WithClincal_05-16-2022 18-13-10_CXR+Clinical\"\n",
-    "    CXR_Clinical_final = \"val_ar_0_9556_ap_0_6776_test_ar_0_7849_ap_0_6534_epoch71_WithClincal_05-16-2022 19-38-03_CXR+Clinical\"\n",
+    "    # CXR_Clinical_ap = \"val_ar_0_9381_ap_0_6945_test_ar_0_8224_ap_0_6378_epoch20_WithClincal_05-16-2022 18-13-10_CXR+Clinical\"\n",
+    "    # CXR_Clinical_final = \"val_ar_0_9556_ap_0_6776_test_ar_0_7849_ap_0_6534_epoch71_WithClincal_05-16-2022 19-38-03_CXR+Clinical\"\n",
     "\n",
-    "    CXR_ap = \"val_ar_0_7518_ap_0_5042_test_ar_0_5388_ap_0_3255_epoch22_WithoutClincal_05-16-2022 20-18-25_CXR\"\n",
-    "    CXR_final = \"val_ar_0_5966_ap_0_4046_test_ar_0_5388_ap_0_3893_epoch54_WithoutClincal_05-16-2022 21-10-18_CXR\"\n",
+    "    # CXR_ap = \"val_ar_0_7518_ap_0_5042_test_ar_0_5388_ap_0_3255_epoch22_WithoutClincal_05-16-2022 20-18-25_CXR\"\n",
+    "    # CXR_final = \"val_ar_0_5966_ap_0_4046_test_ar_0_5388_ap_0_3893_epoch54_WithoutClincal_05-16-2022 21-10-18_CXR\"\n",
+    "\n",
+    "    CXR=\"val_ar_0_4734_ap_0_2989_test_ar_0_3947_ap_0_2774_epoch142_WithoutClincal_05-19-2022 00-56-01_CXR\"\n",
+    "    CXR_Clinial=\"val_ar_0_6160_ap_0_2978_test_ar_0_4945_ap_0_2315_epoch32_WithClincal_05-19-2022 17-45-13_CXR_Clinical\"\n",
     "    \n"
    ]
   },
@@ -170,6 +173,11 @@
    "source": [
     "from tqdm import tqdm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
