--- a/[1.a] reflacx_dataset_preprocessing.ipynb
+++ b/[1.a] reflacx_dataset_preprocessing.ipynb
@@ -297,6 +297,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'id', 'split', 'eye_tracking_data_discarded', 'image',\n",
+       "       'dicom_id', 'subject_id', 'image_size_x', 'image_size_y',\n",
+       "       'Airway wall thickening', 'Atelectasis', 'Consolidation', 'Emphysema',\n",
+       "       'Enlarged cardiac silhouette', 'Fibrosis', 'Fracture',\n",
+       "       'Groundglass opacity', 'Mass', 'Nodule', 'Other', 'Pleural effusion',\n",
+       "       'Pleural thickening', 'Pneumothorax', 'Pulmonary edema',\n",
+       "       'Quality issue', 'Support devices', 'Wide mediastinum',\n",
+       "       'Abnormal mediastinal contour', 'Acute fracture', 'Enlarged hilum',\n",
+       "       'Hiatal hernia', 'High lung volume / emphysema',\n",
+       "       'Interstitial lung disease', 'Lung nodule or mass',\n",
+       "       'Pleural abnormality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reflacx_meta_df.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +427,7 @@
        "3052"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,6 +580,62 @@
     "    .merge(ed_triage_df, \"left\", on=\"stay_id\", suffixes=(\"\", \"_triage\"))\n",
     ")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'dicom_id', 'subject_id', 'study_id',\n",
+       "       'PerformedProcedureStepDescription', 'ViewPosition', 'Rows', 'Columns',\n",
+       "       'StudyDate', 'StudyTime', 'ProcedureCodeSequence_CodeMeaning',\n",
+       "       'ViewCodeSequence_CodeMeaning',\n",
+       "       'PatientOrientationCodeSequence_CodeMeaning', 'in_eye_gaze',\n",
+       "       'in_reflacx', 'StudyDateTime', 'stay_id'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cxr_meta_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'id', 'split', 'eye_tracking_data_discarded', 'image',\n",
+       "       'dicom_id', 'subject_id', 'image_size_x', 'image_size_y',\n",
+       "       'Airway wall thickening', 'Atelectasis', 'Consolidation',\n",
+       "       'Enlarged cardiac silhouette', 'Fibrosis', 'Fracture',\n",
+       "       'Groundglass opacity', 'Other', 'Pneumothorax', 'Pulmonary edema',\n",
+       "       'Quality issue', 'Support devices', 'Wide mediastinum',\n",
+       "       'Abnormal mediastinal contour', 'Acute fracture', 'Enlarged hilum',\n",
+       "       'Hiatal hernia', 'High lung volume / emphysema',\n",
+       "       'Interstitial lung disease', 'Lung nodule or mass',\n",
+       "       'Pleural abnormality'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reflacx_meta_df.columns"
    ]
   },
   {
@@ -1118,7 +1205,7 @@
    "outputs": [],
    "source": [
     "u_df = merged_df.loc[u_idxs]\n",
-    "u_df['split'] = get_split_list(len(u_df))"
+    "u_df['split'] = get_split_list(len(u_df), train_portion=0.7)"
    ]
   },
   {
