--- a/[7.e] evaluation_by_cases.ipynb
+++ b/[7.e] evaluation_by_cases.ipynb
@@ -1503,68 +1503,68 @@
     }
    ],
    "source": [
-    "saving_folder_name = \"evalute_both_models_by_case_nms\"\n",
+    "# saving_folder_name = \"evalute_both_models_by_case_nms\"\n",
     "\n",
-    "for iou_thrs in [\n",
-    "    # 0.05,\n",
-    "    # 0.1,\n",
-    "    0.3\n",
-    "]:\n",
-    "    ### modify the naming here.\n",
-    "    destination_folder = os.path.join(\n",
-    "        saving_folder_name, f\"generated_bb (thrs={iou_thrs}) gt & 3-D clinical\"\n",
-    "    )\n",
-    "    os.makedirs(saving_folder_name, exist_ok=True)\n",
-    "    os.makedirs(destination_folder, exist_ok=True)\n",
-    "    os.makedirs(os.path.join(destination_folder, \"train\"), exist_ok=True)\n",
-    "    os.makedirs(os.path.join(destination_folder, \"val\"), exist_ok=True)\n",
-    "    os.makedirs(os.path.join(destination_folder, \"test\"), exist_ok=True)\n",
+    "# for iou_thrs in [\n",
+    "#     # 0.05,\n",
+    "#     # 0.1,\n",
+    "#     0.3\n",
+    "# ]:\n",
+    "#     ### modify the naming here.\n",
+    "#     destination_folder = os.path.join(\n",
+    "#         saving_folder_name, f\"generated_bb (thrs={iou_thrs}) gt & 3-D clinical\"\n",
+    "#     )\n",
+    "#     os.makedirs(saving_folder_name, exist_ok=True)\n",
+    "#     os.makedirs(destination_folder, exist_ok=True)\n",
+    "#     os.makedirs(os.path.join(destination_folder, \"train\"), exist_ok=True)\n",
+    "#     os.makedirs(os.path.join(destination_folder, \"val\"), exist_ok=True)\n",
+    "#     os.makedirs(os.path.join(destination_folder, \"test\"), exist_ok=True)\n",
     "\n",
-    "    for dataset_type in [\"train\", \"val\", \"test\"]:\n",
-    "        df = detect_eval_dataset.df\n",
-    "        commenting_df = pd.DataFrame(df[df[\"split\"] == dataset_type][\"dicom_id\"])\n",
-    "        max_box_num = 10\n",
-    "        for i in range(1, max_box_num + 1):\n",
-    "            commenting_df[f\"Bounding Box {i}\"] = [\"\"] * len(commenting_df)\n",
+    "#     for dataset_type in [\"train\", \"val\", \"test\"]:\n",
+    "#         df = detect_eval_dataset.df\n",
+    "#         commenting_df = pd.DataFrame(df[df[\"split\"] == dataset_type][\"dicom_id\"])\n",
+    "#         max_box_num = 10\n",
+    "#         for i in range(1, max_box_num + 1):\n",
+    "#             commenting_df[f\"Bounding Box {i}\"] = [\"\"] * len(commenting_df)\n",
     "\n",
-    "        commenting_df[\n",
-    "            [f\"Bounding Box {i}\" for i in range(1, max_box_num + 1)] + [\"dicom_id\"]\n",
-    "        ].to_csv(\n",
-    "            os.path.join(\n",
-    "                destination_folder, dataset_type, f\"{dataset_type}_commenting.csv\"\n",
-    "            ),\n",
-    "            index_label=\"ID\",\n",
-    "        )\n",
+    "#         commenting_df[\n",
+    "#             [f\"Bounding Box {i}\" for i in range(1, max_box_num + 1)] + [\"dicom_id\"]\n",
+    "#         ].to_csv(\n",
+    "#             os.path.join(\n",
+    "#                 destination_folder, dataset_type, f\"{dataset_type}_commenting.csv\"\n",
+    "#             ),\n",
+    "#             index_label=\"ID\",\n",
+    "#         )\n",
     "\n",
-    "    for idx in trange(0, len(detect_eval_dataset)):\n",
-    "        fig = plot_both_model_bb_for_dataset_idx(\n",
-    "            baseline_model=baseline_model,\n",
-    "            xami_model=xami_model,\n",
-    "            train_info=xami_train_info,\n",
-    "            dataset=detect_eval_dataset,\n",
-    "            device=device,\n",
-    "            idx=idx,\n",
-    "            legend_elements=legend_elements,\n",
-    "            disease_cmap=DISEASE_CMAP,\n",
-    "            score_thres=None,\n",
-    "            roi_head_thrs=iou_thrs,\n",
-    "            plot_gt=True,\n",
-    "            plot_clinical=False,\n",
-    "            across_class_nms_thresh= 0.9,\n",
-    "            nms_thresh_in_class=1e-2,\n",
-    "        )\n",
+    "#     for idx in trange(0, len(detect_eval_dataset)):\n",
+    "#         fig = plot_both_model_bb_for_dataset_idx(\n",
+    "#             baseline_model=baseline_model,\n",
+    "#             xami_model=xami_model,\n",
+    "#             train_info=xami_train_info,\n",
+    "#             dataset=detect_eval_dataset,\n",
+    "#             device=device,\n",
+    "#             idx=idx,\n",
+    "#             legend_elements=legend_elements,\n",
+    "#             disease_cmap=DISEASE_CMAP,\n",
+    "#             score_thres=None,\n",
+    "#             roi_head_thrs=iou_thrs,\n",
+    "#             plot_gt=True,\n",
+    "#             plot_clinical=False,\n",
+    "#             across_class_nms_thresh= 0.9,\n",
+    "#             nms_thresh_in_class=1e-2,\n",
+    "#         )\n",
     "\n",
-    "        instance = detect_eval_dataset.df.iloc[idx]\n",
-    "        fig.savefig(\n",
-    "            os.path.join(\n",
-    "                destination_folder,\n",
-    "                instance[\"split\"],\n",
-    "                f\"({idx}) {instance['dicom_id']}.png\",\n",
-    "            )\n",
-    "        )\n",
-    "        plt.cla()\n",
-    "        plt.clf()\n",
-    "        plt.close(\"all\")\n"
+    "#         instance = detect_eval_dataset.df.iloc[idx]\n",
+    "#         fig.savefig(\n",
+    "#             os.path.join(\n",
+    "#                 destination_folder,\n",
+    "#                 instance[\"split\"],\n",
+    "#                 f\"({idx}) {instance['dicom_id']}.png\",\n",
+    "#             )\n",
+    "#         )\n",
+    "#         plt.cla()\n",
+    "#         plt.clf()\n",
+    "#         plt.close(\"all\")\n"
    ]
   },
   {
