add pre-spatialisation layer.

--- a/[7.d] false-positive numbers.ipynb
+++ b/[7.d] false-positive numbers.ipynb
@@ -83,10 +83,10 @@
    "outputs": [],
    "source": [
     "naming_map = {\n",
-    "    TrainedModels.CXR: \"CXR (baseline)\",\n",
-    "    TrainedModels.CXR_Clinical_fusion1: \"CXR+Clinical (3D)\",\n",
-    "    TrainedModels.CXR_Clinical_fusion2: \"CXR+Clinical (1D)\",\n",
-    "    TrainedModels.CXR_Clinial_fusion1_fusion2: \"CXR+Clinical (3D+1D)\"\n",
+    "    TrainedModels.CXR: \"Mask R-CNN (Baseline)\",\n",
+    "    TrainedModels.CXR_Clinical_fusion1: \"MSF-Net (3D)\",\n",
+    "    TrainedModels.CXR_Clinical_fusion2: \"MSF-Net (1D)\",\n",
+    "    TrainedModels.CXR_Clinial_fusion1_fusion2: \"MDF-Net\"\n",
     "}\n"
    ]
   },
