--- a/[7.e] evaluation_by_cases.ipynb
+++ b/[7.e] evaluation_by_cases.ipynb
@@ -17,7 +17,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mike8\\Desktop\\multimodal-abnormalities-detection\\models\\detectors\\rcnn.py:96: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert (\n"
+     ]
+    }
+   ],
    "source": [
     "import os, gc, torch\n",
     "import os \n",
@@ -111,10 +120,10 @@
    "outputs": [],
    "source": [
     "naming_map = {\n",
-    "    TrainedModels.CXR: \"CXR (baseline)\",\n",
-    "    TrainedModels.CXR_Clinical_fusion1: \"CXR+Clinical (3D)\",\n",
-    "    TrainedModels.CXR_Clinical_fusion2: \"CXR+Clinical (1D)\",\n",
-    "    TrainedModels.CXR_Clinial_fusion1_fusion2: \"CXR+Clinical (3D+1D)\"\n",
+    "    TrainedModels.CXR: \"Mask R-CNN (Baseline)\",\n",
+    "    TrainedModels.CXR_Clinical_fusion1: \"MSF-Net (3D)\",\n",
+    "    TrainedModels.CXR_Clinical_fusion2: \"MSF-Net (1D)\",\n",
+    "    TrainedModels.CXR_Clinial_fusion1_fusion2: \"MDF-Net\"\n",
     "}\n"
    ]
   },
@@ -1108,13 +1117,13 @@
        "    (mask_roi_pool): MultiScaleRoIAlign(featmap_names=['0', '1', '2', '3'], output_size=(14, 14), sampling_ratio=2)\n",
        "    (mask_head): MaskRCNNHeads(\n",
        "      (mask_fcn1): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (relu1): ReLU()\n",
+       "      (relu1): ReLU(inplace=True)\n",
        "      (mask_fcn2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (relu2): ReLU()\n",
+       "      (relu2): ReLU(inplace=True)\n",
        "      (mask_fcn3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (relu3): ReLU()\n",
+       "      (relu3): ReLU(inplace=True)\n",
        "      (mask_fcn4): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (relu4): ReLU()\n",
+       "      (relu4): ReLU(inplace=True)\n",
        "    )\n",
        "    (mask_predictor): MaskRCNNPredictor(\n",
        "      (conv5_mask): ConvTranspose2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
@@ -1442,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1493,15 +1502,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 670/670 [20:08<00:00,  1.80s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# saving_folder_name = \"evalute_both_models_by_case_nms\"\n",
     "\n",
