--- a/[8.b] generate_gt_for_commented.ipynb
+++ b/[8.b] generate_gt_for_commented.ipynb
@@ -435,10 +435,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.nn.functional.conv_transpose2d\n"
+   ]
   }
  ],
  "metadata": {
