--- a/[1.a] reflacx_dataset_preprocessing.ipynb
+++ b/[1.a] reflacx_dataset_preprocessing.ipynb
@@ -817,21 +817,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filling missing value for temperature\n",
-      "filling missing value for heartrate\n",
-      "filling missing value for resprate\n",
-      "filling missing value for o2sat\n",
-      "filling missing value for sbp\n",
-      "filling missing value for dbp\n",
-      "filling missing value for pain\n",
-      "filling missing value for acuity\n"
+      "filling missing value for temperature by value 98.10\n",
+      "filling missing value for heartrate by value 85.70\n",
+      "filling missing value for resprate by value 18.50\n",
+      "filling missing value for o2sat by value 97.60\n",
+      "filling missing value for sbp by value 132.30\n",
+      "filling missing value for dbp by value 72.40\n",
+      "filling missing value for pain by value 4.10\n",
+      "filling missing value for acuity by value 2.20\n"
      ]
     }
    ],
@@ -840,8 +840,9 @@
     "\n",
     "for col in merged_df.columns:\n",
     "    if merged_df[col].isna().any():\n",
-    "        print(f\"filling missing value for {col}\")\n",
-    "        merged_df[col] = merged_df[col].fillna(round(merged_df[~merged_df[col].isna()][col].mean(), 1))\n"
+    "        filling_value = round(merged_df[~merged_df[col].isna()][col].mean(), 1)\n",
+    "        print(f\"filling missing value for {col} by value {filling_value:.2f}\")\n",
+    "        merged_df[col] = merged_df[col].fillna(filling_value)\n"
    ]
   },
   {
@@ -865,6 +866,26 @@
    "metadata": {},
    "source": [
     "## The end of the dataframe looks like this: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.30746268656716"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.age.mean()"
    ]
   },
   {
