--- a/[1.b] relfacx_cxr_preprocessing.ipynb
+++ b/[1.b] relfacx_cxr_preprocessing.ipynb
@@ -465,7 +465,7 @@
     "    + merged_df[\"id\"].astype(str)\n",
     "    + \"\\\\anomaly_location_ellipses.csv\"\n",
     ")\n",
-    "\n"
+    "merged_df = merged_df[~merged_df[\"eye_tracking_data_discarded\"]]\n"
    ]
   },
   {
@@ -524,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "====================Columns have missing value in merged_df====================\n",
-      "[('stay_id', 2378)]\n"
+      "[('stay_id', 2362)]\n"
      ]
     }
    ],
@@ -645,7 +645,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>val</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -769,7 +769,7 @@
        "\n",
        "  Lung nodule or mass  Pleural abnormality  Fracture  split  \n",
        "0                 0.0                  0.0       0.0  train  \n",
-       "1                 0.0                  0.0       0.0    val  \n",
+       "1                 0.0                  0.0       0.0   test  \n",
        "2                 0.0                  0.0       0.0  train  \n",
        "3                 1.0                  0.0       0.0  train  \n",
        "4                 0.0                  0.0       0.0  train  \n",
@@ -794,26 +794,26 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('Quality issue', 10.0),\n",
-       "             ('Fibrosis', 23.0),\n",
+       "OrderedDict([('Quality issue', 9.0),\n",
+       "             ('Fibrosis', 22.0),\n",
        "             ('Wide mediastinum', 36.0),\n",
-       "             ('Fracture', 68.0),\n",
+       "             ('Fracture', 58.0),\n",
        "             ('Airway wall thickening', 84.0),\n",
        "             ('Hiatal hernia', 108.0),\n",
        "             ('Interstitial lung disease', 126.0),\n",
-       "             ('Acute fracture', 160.0),\n",
+       "             ('Acute fracture', 155.0),\n",
        "             ('Enlarged hilum', 236.0),\n",
        "             ('Abnormal mediastinal contour', 357.0),\n",
        "             ('High lung volume / emphysema', 412.0),\n",
-       "             ('Pneumothorax', 463.0),\n",
-       "             ('Lung nodule or mass', 668.0),\n",
-       "             ('Support devices', 1318.0),\n",
-       "             ('Groundglass opacity', 1779.0),\n",
-       "             ('Pulmonary edema', 1829.0),\n",
-       "             ('Enlarged cardiac silhouette', 3303.0),\n",
-       "             ('Consolidation', 3708.0),\n",
-       "             ('Atelectasis', 3768.0),\n",
-       "             ('Pleural abnormality', 4163.0)])"
+       "             ('Pneumothorax', 458.0),\n",
+       "             ('Lung nodule or mass', 663.0),\n",
+       "             ('Support devices', 1305.0),\n",
+       "             ('Groundglass opacity', 1770.0),\n",
+       "             ('Pulmonary edema', 1825.0),\n",
+       "             ('Enlarged cardiac silhouette', 3276.0),\n",
+       "             ('Consolidation', 3688.0),\n",
+       "             ('Atelectasis', 3744.0),\n",
+       "             ('Pleural abnormality', 4150.0)])"
       ]
      },
      "execution_count": 16,
